# Deep-Learning-Project-MLFlow-DVC

./: .gitignore  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  scores.json  template.py
config/: config.yaml
mlruns/0/: meta.yaml
mlruns/0/1390860fb2e140cfb9ba3f03652c581d/: meta.yaml
mlruns/0/1390860fb2e140cfb9ba3f03652c581d/metrics/: accuracy  loss
mlruns/0/1390860fb2e140cfb9ba3f03652c581d/tags/: mlflow.runName
mlruns/0/5ff6e2e9b42d4c828580617fc91147b4/: meta.yaml
mlruns/0/5ff6e2e9b42d4c828580617fc91147b4/metrics/: accuracy  loss
mlruns/0/5ff6e2e9b42d4c828580617fc91147b4/tags/: mlflow.runName  mlflow.source.git.commit
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_model_training.ipynb  04_model_evaluation.ipynb  trials.ipynb
src/cnnClassifier/: __init__.py
src/cnnClassifier.egg-info/: PKG-INFO  SOURCES.txt
src/cnnClassifier/components/: data_ingestion.py  model_evaluation_mlflow.py  model_training.py  prepare_base_model.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_model_evaluation.py
src/cnnClassifier/utils/: common.py
templates/: index.html
