[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnnClassifier"
version = "0.0.0"
authors = [
    { name = "ishita-jainn", email = "ishitaj232@gmail.com" }
]
description = "A small python package for CNN app"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["deep learning", "cnn", "mlflow", "project"]

[project.urls]
Homepage = "https://github.com/ishita-jainn/Deep-Learning-Project-MLFlow-DVC"
BugTracker = "https://github.com/ishita-jainn/Deep-Learning-Project-MLFlow-DVC/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
